# Red-Shadow

./: .dockerignore  Chat_history.md  Dockerfile  README.md  deep_code_analysis_qa.md.resolved  docker-compose.yml  pyproject.toml  requirements.txt  run_pentest.py  setup.py  system_architecture_overview.md.resolved  test_api.py  test_system.py  test_v31.py
.claude/commands/: doctor.md  exploit.md  findings.md  guardian.md  link.md  report.md  scan.md  setup-tools.md  status.md  tools.md
docs/: REDCLAW_AGENTIC_CORE.md  REDCLAW_COMPLETE_EXPANSION_SUPPLEMENT.md  REDCLAW_EXPLOITATION.md  REDCLAW_MODEL_OPENCLAW_ORCHESTRATION.md  REDCLAW_PLANNING.md  REDCLAW_RECONNAISSANCE.md  REDCLAW_REPORTING.md  REDCLAW_V2_CORE_ARCHITECTURE.md  REDCLAW_VULNERABILITY_ASSESSMENT.md  TEST_PART1.md  TEST_PART10.md  TEST_PART11.md  TEST_PART2.md  TEST_PART3.md  TEST_PART4.md  TEST_PART5.md  TEST_PART6.md  TEST_PART7.md  TEST_PART8.md  TEST_PART9.md  USAGE_GUIDE.md  kaggle_playbook.py
docs/Artitechture/: REDCLAW_AGENTIC_CORE_v2.1_DUAL_BRAIN.md  REDCLAW_AGENT_TEAMS_ARCHITECTURE.md  REDCLAW_AGENT_TEAMS_IMPLEMENTATION.md  REDCLAW_BINARY_ANALYST.md  REDCLAW_CAUSAL_CHAIN_REPORTING.md  REDCLAW_DUAL_BRAIN_ARCHITECTURE.md  REDCLAW_FINE_TUNING_PIPELINE.md  REDCLAW_MEMAGENT.md  REDCLAW_MEMORY_RAG.md  REDCLAW_MODEL_ALLOY.md  REDCLAW_MODEL_SELECTION_STRATEGY.md  REDCLAW_ORCHESTRATION_v2.1_DUAL_BRAIN.md  REDCLAW_POST_EXPLOITATION.md  REDCLAW_SCANNING.md  REDCLAW_SUPPLEMENT.md  REDCLAW_TEAMMATE_GUIDE.md  REDCLAW_TEAM_LEAD_GUIDE.md  REDCLAW_TOOL_INTEGRATION_GUIDE.md  REDCLAW_V3_AGENTIC_CORE.md  REDCLAW_V3_CORE_ARCHITECTURE.md  REDCLAW_V3_ORCHESTRATION.md  REDCLAW_V3_ORCHESTRATION_ROUTER.md  REDCLAW_V3_RECONNAISSANCE.md  REDCLAW_V3_ROUTER_IMPLEMENTATION.md  REDCLAW_V3_SCANNING.md  REDCLAW_V3_TOOL_INTEGRATION_GUIDE.md  REDCLAW_V3_VULNERABILITY_ASSESSMENT.md  REDCLAW_VALIDATOR_AGENT.md  ROUTER_IMPLEMENTATION.md  TEMPORAL_GRAPH_IMPLEMENTATION.md
engagements/192.168.1.83_20260226_164112/: claude-progress.txt  claude-progress.txt.json  mailbox.db
engagements/192.168.1.83_20260226_165154/: claude-progress.txt  claude-progress.txt.json  tasks.db
(+107 files in other folders)
